# wild-robot

./: LICENSE
data/: README
data/interpreted/: README
data/interpreted/signals/: trial_01.txt  trial_02.txt  trial_03.txt  trial_04.txt  trial_05.txt  trial_06.txt  trial_07.txt  trial_08.txt  trial_09.txt  trial_10.txt
data/raw_experiment/: README
data/raw_experiment/vicon/: README  trial_01.txt  trial_02.txt  trial_03.txt  trial_04.txt  trial_05.txt  trial_06.txt  trial_07.txt  trial_08.txt  trial_09.txt  trial_10.txt
data/raw_experiment/video/: README
gazebo/: CMakeLists.txt  camera_plugin.cpp  controller.cpp  filter.world  filtering_controller.cpp  gazebo_log.h  height.world  height_correction_controller.cpp  postprocess.world  postprocess_controller.cpp  randomization_controller.cpp  render.world  render_controller.cpp  simulate-offset+1.world  simulate-offset+2.world  simulate-offset+3.world  simulate-offset+4.world  simulate-offset-1.world  simulate-offset-2.world  simulate-offset-3.world  simulate-offset-4.world  simulate.world  simulation_controller.cpp  synchronization_controller.cpp  synchronize.world  vicon_visualization_controller.cpp  visualization_controller.cpp  visualize.world
gazebo/models/weazelball/: model.sdf
gazebo/models/weazelball-offset+1/: model.sdf
gazebo/models/weazelball-offset+1/meshes/visual/: wb-shell-freehemi.dae
gazebo/models/weazelball-offset+2/: model.sdf
gazebo/models/weazelball-offset+3/: model.sdf
gazebo/models/weazelball-offset+4/: model.sdf
gazebo/models/weazelball-offset-1/: model.sdf
gazebo/models/weazelball-offset-2/: model.sdf
gazebo/models/weazelball-offset-3/: model.sdf
gazebo/models/weazelball-offset-4/: model.sdf
gazebo/models/weazelball/meshes/visual/: motor.dae
resources/solidworks/: wb-motor-assembly.SLDASM  wb-motor-battery.sldprt  wb-motor-cw.sldprt  wb-motor-housing.sldprt  wb-shell-fixedhemi.sldprt  wb-shell-freehemi.sldprt  wb-shell-oring.sldprt  wb-shell.SLDASM  wb.SLDASM
resources/step/: Ball2.STEP  WeaselBall.STEP
scripts/: batch_svr.sh  crop_path_plot.sh  decimate_state.py  ex_ml_linearsvr.py  ex_ml_rbf.py  ex_plot_hilight_subpath.py  ex_plot_multipath.py  ex_plot_path.py  ex_plot_svr.py  ex_plot_training_path.py  ex_plot_vicon_motor_frequency.py  ex_plot_vicon_path.py  ex_plot_vicon_stats.py  flatten_raw_vicon.py  hdf5_importer.py  hdf5_tester.py  map_signals_to_vicon.py  process_data.sh  quat.py  simstate_to_trainingset.py  wb_linearsvr.py  wb_raw_vicon_reader.py  wb_svr.py  wbml.py  wbplot.py
scripts/matlab/: centeroffset_objectivefun.m  compute_differentials.m  compute_fiducial_center.m  count_records.m  create_fusion_objects.m  fiducial-data  filterframeratedata.m  framedata_validator.m  freqfit.m  fusiondata.m  get_next_record.m  is_good_frame.m  load_raw_vicon.m  parse_raw_vicon.m  plot_height_differential.m  quatangle.m  quatmult.m  quatrot.m  quatrpy.m  readkeyframefile.m  validateframedata.m  video_data.m
simwise4d/: README.md
solidworks/: Ball2 - Part1-1.STL  Ball2 - Part2-1.STL  Ball2 - Part3-1.STL  Ball2.STEP  Ball2.STL  WeaselBall.STEP  WeaselBall.STL
